refactor: stabilise public API surface